# content_creator

./: .gitignore  DEVELOPER_GUIDE.md  README.md
script_to_movie/backend/: .env.example  CLAUDE.md  PHASE2_SETUP.md  alembic.ini  pyproject.toml
script_to_movie/backend/alembic/: env.py
script_to_movie/backend/alembic/versions/: 0cb61fd871b2_initial_tables.py  1b43de78e16c_initial_schema.py  a1b2c3d4e5f6_widen_video_prompt_style_to_text.py  b2c3d4e5f6a7_widen_generated_video_url_to_text.py
script_to_movie/backend/app/: config.py  main.py
script_to_movie/backend/app/auth/: README.md  router.py  service.py
script_to_movie/backend/app/core/: README.md  database.py  dependencies.py  kling.py  llm.py  security.py  storage.py
script_to_movie/backend/app/models/: __init__.py  character.py  final_movie.py  project.py  scene.py  setting.py  storyboard.py  user.py  video.py
script_to_movie/backend/app/phases/: README.md  base_agent.py
script_to_movie/backend/app/phases/script_to_trailer/: PLAN.md  README.md  prompts.py  router.py  service.py
script_to_movie/backend/app/phases/storyboard_to_movie/: PLAN.md  README.md  prompts.py  router.py  service.py  (+1 more)
script_to_movie/backend/app/projects/: README.md  router.py  service.py
script_to_movie/backend/app/schemas/: __init__.py  character.py  project.py  scene.py  setting.py  storyboard.py  user.py  video.py
script_to_movie/backend/app/system/: README.md  router.py
script_to_movie/backend/app/workflow/: README.md  orchestrator.py  router.py  service.py
script_to_movie/backend/scripts/: seed_phase1_data.py
(+70 files in other folders)
